# LoveGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/fbxes/: sphere.fbx
assets/ibl/gym/: brdf.dds  diffuse.dds
assets/ibl/night/: brdf.dds  diffuse.dds
assets/ibl/outdoor/: diffuse.dds
assets/objs/: sphere2obj
assets/raytracing/: cs.glsl  raytracing.glsl
assets/scenes/: 1.gltf
assets/scenes/animation/: animation.gltf
assets/scenes/material/: material.gltf
assets/scenes/ssr/: ssr.gltf
assets/shaders/: blinn_phong.glsl  blinn_phong.shader  blinn_phong_normal.glsl  blinn_phong_normal.shader  bloom.glsl  bloom_blur.glsl  font.glsl  font.shader  image.glsl  pbr.glsl  post_blur.glsl  post_blur.shader  post_gray.glsl  post_gray.shader  post_normal.glsl  post_normal.shader  skybox.glsl  test.shader  tone_mapping.glsl  ui.glsl  unlit_pos.glsl  unlit_pos.shader  unlit_pos_tex.glsl  unlit_pos_tex.shader
assets/tftest/: tftest.gltf
example/: app_light.cpp  app_light.h  main.cpp  pbr.cpp  raytracing.cpp  ssr.cpp
lovegl/: CMakeLists.txt  app.h  config.h  engine.cpp  engine.h  glfw_window.cpp  glfw_window.h  lovegl.h  main.cpp  main.h  node.cpp  node.h  resource_manager.cpp  scene_manager.cpp  scene_manager.h
lovegl/core/: line_renderer.cpp  line_renderer.h  material.cpp  material.h  post_processing.cpp  post_processing.h  render_target.cpp  render_target.h  renderer.cpp  shader.cpp  skybox.cpp  skybox.h  texture.cpp  texture.h  ui_batch_renderer.cpp  ui_batch_renderer.h  vertex_attribute.cpp
lovegl/entity/: camera.cpp  camera.h  light.cpp  light.h  mesh.cpp
lovegl/physics/: ray.h
lovegl/raytracing/: compute_shader.cpp  compute_shader.h
lovegl/ui/: button.cpp  checkbox.cpp  checkbox.h  font_manager.cpp  label.cpp  simple_button.cpp  simple_button.h  slider.cpp  slider.h  ui_button.cpp  ui_button.h  ui_label.cpp  ui_label.h  ui_rect.cpp  ui_rect.h  ui_root.cpp  ui_root.h
src/: CMakeLists.txt  app.cpp  app.h  common.h  config.h  engine.cpp  engine.h  entity.cpp  entity.h  entity_box.cpp  entity_box.h  entity_camera.cpp  entity_camera.h  entity_cone.cpp  entity_cone.h  entity_cylinder.cpp  entity_cylinder.h  entity_geometry.cpp  entity_geometry.h  entity_light.cpp  entity_light.h  entity_mesh.cpp  entity_mesh.h  kd_render.h  lovegl.h  main.cpp  material.cpp  material.h  math.h  node.cpp  node.h  ray.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  resource_mananger.cpp  resource_mananger.h  (+9 more)
src/core/: material.cpp  material.h  post_processing.cpp  post_processing.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  vertex_attribute.h
src/entity/: camera.cpp  camera.h  light.h  mesh.cpp  mesh.h
src/example/: app_light.cpp  app_light.h
src/physics/: ray.h
src/scene/: scene_geometry.cpp  scene_geometry.h
src/ui/: font_manager.cpp  font_manager.h  rect_data.h  ui_button.cpp  ui_button.h  ui_label.cpp  ui_rect.cpp  ui_rect.h  ui_root.cpp  ui_root.h
